--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
