--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2"
   },
