--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Uberrimae",
   "version": "0.0.1",
   "private": true,
+  "main": "App.tsx",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
